@@ -1,5 +1,5 @@
 AUX wmaker.desktop 221 RMD160 501ba6451f7e756cc3d07682d728bcd6fe55366d SHA1 acd95a41645fbef358459f8f4753056cb321497e SHA256 40359d3c61117f0dbc5eb547e4c369982427e8bc3174c95002d34eb30f9a4a84
 DIST WindowMaker-extra-0.1.tar.gz 238018 RMD160 94334c2c12d20a8fd0cd2a70e54cd3689f043038 SHA1 80f34cb3af705ec0f79d727b82cef28ee50fc4e7 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4
-EBUILD windowmaker-crm-9999.ebuild 3447 RMD160 6f698c38171dbe7f30c06f68b2a7fb305be2a414 SHA1 8e6413b6e18dbdd711a1f0316d448035f9971977 SHA256 bafe5544407fe1a1278f4e9cc5e36caf05133e5d1084fdd0485eb31ef0d67064
-MISC ChangeLog 339 RMD160 7625bf76678e9946ab049246323df63da51b0650 SHA1 f8e5bdd91cd0b7db32d0eb60ed6863dbc3540fe4 SHA256 9518f6565a0543cb10f1b5a827a42b6378a568572316b79d1d3d75128a02eaa5
+EBUILD windowmaker-crm-9999.ebuild 2960 RMD160 f669c830168f4603864da326397f0e8a58045c1c SHA1 1d9d7a8db4ce916b340168631c8b9c6872e96826 SHA256 0616dc9f06d80585c3205493cffd0e3b120eaa7de7eacadf86b69d4b66c77f06
+MISC ChangeLog 509 RMD160 710aff6b0f74226a893d4c5fdffad3c3fef91aa4 SHA1 5aa625742f7be8ca72c19ad9a28d9877e7fecf24 SHA256 441b049051e9207604ae166f228c60bb832f9762027359d20d2ae4a0e9ec9d7d
 MISC metadata.xml 455 RMD160 41514c712d553ed4752ce045efca3d27dd036c19 SHA1 345b35512a60f3d19cf5fc4cebbfe30bd6006bf3 SHA256 7661636f854da151e83478668ff58943b0d80662f6abd2a209707d3d34b37c7c
