@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
+  windowmaker-crm-9999.ebuild:
+  Use FHS layout for WPrefs, to keep in sync with the new default gnustep
+  layout
+
 *windowmaker-crm-9999 (01 Apr 2011)
 
   01 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
